[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
neutron-sdk = "0.10.0"
cw-storage-plus = "1.2.0"
cw-storage-macro = "1.2.0"
cosmwasm-std = { version = "1.4.5" }
cosmwasm-schema = "1.4.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-json-wasm = { version = "1.0.1" }
thiserror = "1.0.61"
cosmos-sdk-proto = { version = "0.21.1", default-features = false }
base64 = "0.21.7"
bech32 = "0.11.0"
byteorder = "1.5.0"

cw-multi-test = "1.1.0"