[package]
name = "awesome-restaker"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw-storage-macro = { workspace = true }
neutron-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
cosmos-sdk-proto = { workspace = true }
base64 = { workspace = true}
bech32 = { workspace = true }
byteorder = { workspace = true }
restaker-utils = { path = "../../packages/restaker-utils", version = "0.1.0" }

[dev-dependencies]
cw-multi-test = { workspace = true }